fixing alignment

--- a/web/themes/custom/sfgovpl/src/sass/node/_node-report.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-report.scss
@@ -218,6 +218,7 @@
     img {
       margin-left: 0;
       margin-right: auto;
+      float: none;
     }
   }
 
